--- a/pages/map.html
+++ b/pages/map.html
@@ -40,7 +40,7 @@
         </main>
         <nav class="bottom-nav">
             <a href="farabi.html"><i class="fa-solid fa-landmark"></i> Фараби</a>
-            <a href="/" class="active"><i class="fa-solid fa-home"></i> Главная</a>
+            <a href="/"><i class="fa-solid fa-home"></i> Главная</a>
             <a href="map.html"><i class="fa-solid fa-map"></i> Карта</a>
             <a href="contacts.html"><i class="fa-solid fa-address-book"></i> Контакты</a>
         </nav>
