--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="src/master.css">
         <link rel="manifest" href="manifest.json">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="images/logo.png">
+        <link rel="apple-touch-icon" href="images/logonew1.png">
     </head>
     <body>
         <header class="header">
