--- a/en_pages/committee.html
+++ b/en_pages/committee.html
@@ -27,106 +27,101 @@
             
                     <div class="committee-list">
                         <div class="committee-member">
-                            <img src="../images/member1.jpeg" alt="Имя Фамилия">
-                            <h3>Түймебаев Жансейіт Қансейітұлы</h3>
-                            <p>Әл-Фараби атындағы Қазақ ұлттық университетінің Басқарма Төрағасы – Ректоры</p>
+                            <img src="../images/member2.jpeg" alt="Duissenov E.E.">
+                            <h3>Duissenov E.E.</h3>
+                            <p>Board Member – Vice-Rector for Operational Activities</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member2.jpeg" alt="Имя Фамилия">
-                            <h3>Дүйсенов Еркін Эрманович</h3>
-                            <p>Басқарма мүшесі – Операциялық қызмет бойынша проректор</p>
+                            <img src="../images/member1.jpg" alt="Meirbayev B.B.">
+                            <h3>Meirbayev B.B.</h3>
+                            <p>Faculty Dean for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member1.jpg" alt="Имя Фамилия">
-                            <h3>Мейірбаев Бекжан Берикбаевич</h3>
-                            <p>Философия және саясаттану факультетінің деканы</p>
+                            <img src="../images/member3.jpeg" alt="Abdiraiymova G.S.">
+                            <h3>Abdiraiymova G.S.</h3>
+                            <p>Department Head for Sociology and Social Work of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member3.jpeg" alt="Имя Фамилия">
-                            <h3>Әбдірайымова Гүлмира Серікқызы</h3>
-                            <p>Философия және саясаттану факультеті әлеуметтану және әлеуметтік жұмыс кафедрасының меңгерушісі</p>
+                            <img src="../images/member13.png" alt="Altaeva Zh.A.">
+                            <h3>Altaeva Zh.A.</h3>
+                            <p>Doctor of Philosophy, Professor at the Department of Philosophy in Al-Farabi Kazakh National University, Scientific Advisor at Al-Farabi Center</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member13.png" alt="Имя Фамилия">
-                            <h3>Алтаев Жақыпбек Алтайұлы</h3>
-                            <p>философия ғылымдарының докторы, әл-Фараби атындағы Қазақ ұлттық университеті философия кафедрасының  профессоры, әл-Фараби орталығының ғылыми кеңесшісі</p>
+                            <img src="../images/member2.jpg" alt="Arekenova Zh.A.">
+                            <h3>Arekenova Zh.A.</h3>
+                            <p>Director of Al-Farabi Library</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member2.jpg" alt="Имя Фамилия">
-                            <h3>Арекенова Жадыра Айдынгалиевна</h3>
-                            <p>Әл-Фараби кітапханасының директоры</p>
+                            <img src="../images/member1.jfif" alt="Alqozhaeva N.S.">
+                            <h3>Alqozhaeva N.S.</h3>
+                            <p>Department Head for Pedagogy and Educational Management of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member1.jfif" alt="Имя Фамилия">
-                            <h3>Әлқожаева Нұрсұлу Сейткерімқызы</h3>
-                            <p>Философия және саясаттану факультеті педагогика және білім беру менеджменті кафедрасының меңгерушісі</p>
+                            <img src="../images/member3.png" alt="Baltymova M.R.">
+                            <h3>Baltymova M.R.</h3>
+                            <p>Deputy Head for Scientific-Innovative Activities and International Relations at the Department for Religious and Cultural Studies of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member3.png" alt="Имя Фамилия">
-                            <h3>Балтымова Мира Рашидовна</h3>
-                            <p>Философия және саясаттану факультеті дінтану және мәдениеттану кафедрасы меңгерушісінің ғылыми-инновациялық қызмет және халықаралық байланыстар жөніндегі орынбасары</p>
+                            <img src="../images/member14.png" alt="Bekenova Zh.N.">
+                            <h3>Bekenova Zh.N.</h3>
+                            <p>Deputy Head for Educational and Methodological Work and Educational Affairs at Philosophy Department of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member14.png" alt="Имя Фамилия">
-                            <h3>Бекенова Жұмагүл Нұрдәулетқызы</h3>
-                            <p>Философия және саясаттану факультеті философия  кафедрасы меңгерушісінің оқу-әдістемелік және тәрбие ісі жөніндегі орынбасары</p>
+                            <img src="../images/member15.png" alt="Duyssenbaev A.K.">
+                            <h3>Duyssenbaev A.K.</h3>
+                            <p>Candidate in Pedagogical Sciences, Associate Professor, Deputy Head of the Department for Pedagogy and Educational Management of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member15.png" alt="Имя Фамилия">
-                            <h3>Дүйсенбаев Абай Кабакбаевич</h3>
-                            <p>Философия және саясаттану факультеті педагогика және білім беру менеджменті кафедрасы меңгерушісінің орынбасары, педагогика ғылымдарының кандидаты, доцент</p>
+                            <img src="../images/member3.jpg" alt="Gabitov T.H.">
+                            <h3>Gabitov T.H.</h3>
+                            <p>Doctor of Philosophy, Professor at Philosophy Department in Al-Farabi Kazakh National University, Co-Chairman of the Philosophy Society of Turkic People, Vice-President of the Kazakhstan Philosophical Congress</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member3.jpg" alt="Имя Фамилия">
-                            <h3>Ғабитов Тұрсын Хафизұлы</h3>
-                            <p>философия ғылымдарының докторы, әл-Фараби атындағы Қазақ ұлттық университеті философия кафедрасының профессоры, Түрік халықтары Философия қоғамының тең төрағасы, Қазақстандық Философиялық Конгрестің вице-президенті</p>
+                            <img src="../images/member4.png" alt="Zeinullin R.B.">
+                            <h3>Zeinullin R.B.</h3>
+                            <p>Deputy Head for Scientific-Innovative Activities and International Relations at Philosophy Department of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member4.png" alt="Имя Фамилия">
-                            <h3>Зейнуллин Раймбек Бақытжанұлы</h3>
-                            <p>Философия және саясаттану факультеті философия  кафедрасы меңгерушісінің ғылыми-инновациялық қызмет және халықаралық байланыстар жөніндегі орынбасары</p>
+                            <img src="../images/member17.png" alt="Kaupenbaeva S.M.">
+                            <h3>Kaupenbaeva S.M.</h3>
+                            <p>Acting Head of Department for Religious and Cultural Studies of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member17.png" alt="Имя Фамилия">
-                            <h3>Каупенбаева Самал Мухаметалиевна</h3>
-                            <p>Философия және саясаттану факультеті дінтану және мәдениеттану кафедрасының меңгерушісінің міндетін атқарушы</p>
+                            <img src="../images/member18.png" alt="Kudaibergenova N.Z.">
+                            <h3>Kudaibergenova N.Z.</h3>
+                            <p>Acting Associate Professor at Philosophy Department of the Faculty for Philosophy and Political Science, PhD</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member18.png" alt="Имя Фамилия">
-                            <h3>Құдайбергенова Назгүл Жанисовна</h3>
-                            <p>Философия және саясаттану факультеті философия кафедрасының доценті м.а., PhD</p>
+                            <img src="../images/member19.png" alt="Kuranbek A.A.">
+                            <h3>Kuranbek A.A.</h3>
+                            <p>Head of Philosophy Department of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member19.png" alt="Имя Фамилия">
-                            <h3>Құранбек Әсет Абайұлы</h3>
-                            <p>Философия және саясаттану факультеті философия  кафедрасының меңгерушісі</p>
+                            <img src="../images/member20.png" alt="Kurmanalieva A.D.">
+                            <h3>Kurmanalieva A.D.</h3>
+                            <p>Doctor of Philosophy, Professor at the Department for Religious and Cultural Studies of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member20.png" alt="Имя Фамилия">
-                            <h3>Құрманалиева Айнұр Дүрбелеңқызы</h3>
-                            <p>философия ғылымдарының докторы, Философия және саясаттану факультеті дінтану және мәдениеттану кафедрасының  профессоры</p>
+                            <img src="../images/member4.jpg" alt="Mynbaeva A.K.">
+                            <h3>Mynbaeva A.K.</h3>
+                            <p>Head of the Department for General and Applied Psychology of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member4.jpg" alt="Имя Фамилия">
-                            <h3>Мынбаева Айгерим Казыевна</h3>
-                            <p>Философия және саясаттану факультеті жалпы және қолданбалы психология кафедрасының меңгерушісі</p>
+                            <img src="../images/member5.jpg" alt="Nasimova G.O.">
+                            <h3>Nasimova G.O.</h3>
+                            <p>Head of the Department for Political Science and Political Technologies of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member5.jpg" alt="Имя Фамилия">
-                            <h3>Насимова Гүлнар Өрленбаевна</h3>
-                            <p>Философия және саясаттану факультеті саясаттану және саяси технологиялар кафедрасының меңгерушісі</p>
+                            <img src="../images/member23.png" alt="Omirbekova A.O.">
+                            <h3>Omirbekova A.O.</h3>
+                            <p>Deputy Dean for Educational and Methodological Work and Educational Affairs of the Faculty for Philosophy and Political Science</p>
                         </div>
                         <div class="committee-member">
-                            <img src="../images/member23.png" alt="Имя Фамилия">
-                            <h3>Өмірбекова Әлия Өмірбековна</h3>
-                            <p>Философия және саясаттану факультеті деканының оқу-әдістемелік және тәрбие жұмысы жөніндегі орынбасары</p>
+                            <img src="../images/member2.png" alt="Oserbaev E.N.">
+                            <h3>Oserbaev E.N.</h3>
+                            <p>Deputy Dean for Scientific-Innovative Activities and International Relations of the Faculty for Philosophy and Political Science</p>
                         </div>
-                        <div class="committee-member">
-                            <img src="../images/member2.png" alt="Имя Фамилия">
-                            <h3>Өсербаев Елдос Нұрланұлы</h3>
-                            <p>Философия және саясаттану факультеті деканының ғылыми-инновациялық қызмет және халықаралық байланыстар жөніндегі орынбасары</p>
-                        </div>
-                    </div>
+                    </div>                    
                 </div>
             </section>
             
@@ -142,13 +137,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/en_pages/forum.html">Farabi Forum</a>
-            <a href="/en_pages/programme.html">Programme</a>
-            <a href="/en_pages/sections.html">Sections</a>
+            <a href="/en_pages/programme.html">Conference №1</a>
+            <a href="/en_pages/sections.html">Conference №2</a>
+            <a href="/en_pages/mazhilis.html">Meeting</a>
             <a href="/en_pages/discussion.html">Discussion areas</a>
+            <a href="/en_pages/speakers.html">Speakers</a>
             <a href="/en_pages/committee.html">Committee</a>
             <a href="/en_pages/partners.html">Partners</a>
-            <a href="/en_pages/topics.html">Topics</a>
-            <a href="/en_pages/speakers.html">Speakers</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
