--- a/en_pages/farabi.html
+++ b/en_pages/farabi.html
@@ -65,13 +65,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/en_pages/forum.html">Farabi Forum</a>
-            <a href="/en_pages/programme.html">Programme</a>
-            <a href="/en_pages/sections.html">Sections</a>
+            <a href="/en_pages/programme.html">Conference №1</a>
+            <a href="/en_pages/sections.html">Conference №2</a>
+            <a href="/en_pages/mazhilis.html">Meeting</a>
             <a href="/en_pages/discussion.html">Discussion areas</a>
+            <a href="/en_pages/speakers.html">Speakers</a>
             <a href="/en_pages/committee.html">Committee</a>
             <a href="/en_pages/partners.html">Partners</a>
-            <a href="/en_pages/topics.html">Topics</a>
-            <a href="/en_pages/speakers.html">Speakers</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
