--- a/kz_pages/speakers.html
+++ b/kz_pages/speakers.html
@@ -91,6 +91,45 @@
                             <h3>Альберт Фишлер</h3>
                             <p>ғалым, құрметті профессор, Академиялық Пальма орденінің, Қазақстан Республикасы Президентінің Бейбітшілік және келісім сыйлығының иегері (Франция)</p>
                         </div>
+
+                        <div class="committee-member">
+                            <a href="https://kk.wikipedia.org/wiki/%D0%96%D0%B0%D2%9B%D1%8B%D0%BF%D0%B1%D0%B5%D0%BA_%D0%90%D0%BB%D1%82%D0%B0%D0%B9%D2%B1%D0%BB%D1%8B_%D0%90%D0%BB%D1%82%D0%B0%D0%B5%D0%B2"><img src="../images/member11.jpg" alt="Имя Фамилия"></a>
+                            <h3>Алтаев Жақыпбек Алтайұлы</h3>
+                            <p>философия ғылымдарының докторы, әл-Фараби атындағы Қазақ ұлттық университетінің философия кафедрасының профессоры, әлФараби орталығының ғылыми кеңесшісі</p>
+                        </div>
+
+                        <div class="committee-member">
+                            <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B8%D1%80%D0%B0%D0%B1%D0%B0%D0%B5%D0%B2,_%D0%9D%D1%83%D1%80_%D0%A1%D0%B5%D1%80%D0%B8%D0%BA%D0%BE%D0%B2%D0%B8%D1%87#:~:text=%D0%9D%D2%B1%D1%80%20%D0%A1%D0%B5%D1%80%D1%96%D0%BA%D2%B1%D0%BB%D1%8B%20%D2%9A%D0%B8%D1%80%D0%B0%D0%B1%D0%B0%D0%B5%D0%B2%20(1951%20%D0%B6%D1%8B%D0%BB%D1%8B,%D0%B5%D2%A3%D0%B1%D0%B5%D0%BA%20%D1%81%D1%96%D2%A3%D1%96%D1%80%D0%B3%D0%B5%D0%BD%20%D2%93%D1%8B%D0%BB%D1%8B%D0%BC%20%D2%9B%D0%B0%D0%B9%D1%80%D0%B0%D1%82%D0%BA%D0%B5%D1%80%D1%96%20(2007)"><img src="../images/member12.jpg" alt="Имя Фамилия"></a>
+                            <h3>Қирабаев Нұр Серікұлы</h3>
+                            <p>философия ғылымдарының докторы, профессор, РУДН
+                                университетінің гуманитарлық-әлеуметтік ғылымдар факультетінің
+                                философия тарихы кафедрасының меңгерушісі, араб-мұсылман
+                                философиясының маманы, Ресей Федерациясының еңбек сіңірген
+                                ғылым қайраткері</p>
+                        </div>
+
+                        <div class="committee-member">
+                            <a href="https://openu.kz/ru/author/seytahmetova-natalya-lvovna"><img src="../images/member13.jpg" alt="Имя Фамилия"></a>
+                            <h3>Сейтахметова Наталья Львовна</h3>
+                            <p>ҚР ҰҒА корреспондент-мүшесі, философия ғылымдарының докторы,
+                                профессор, ҚР БҒМ ҒК Философия, саясаттану және дінтану
+                                институтының бас ғылыми қызметкері</p>
+                        </div>
+
+                        <div class="committee-member">
+                            <a href="https://kk.wikipedia.org/wiki/%D0%A1%D0%B0%D0%BC%D0%B0%D0%BB_%D0%90%D0%B1%D0%B0%D0%B9%D2%9B%D1%8B%D0%B7%D1%8B_%D0%A2%D3%A9%D0%BB%D0%B5%D1%83%D0%B1%D0%B0%D0%B5%D0%B2%D0%B0"><img src="../images/member1.webp" alt="Имя Фамилия"></a>
+                            <h3>Төлеубаева Самал Абайқызы</h3>
+                            <p>филология ғылымдарының докторы, Л.Н. Гумилев атындағы Еуразия
+                                ұлттық университеті шығыстану кафедрасының профессоры</p>
+                        </div>
+
+                        <div class="committee-member">
+                            <a href="https://ru.wikipedia.org/wiki/%D0%A8%D0%B5%D1%80%D0%BC%D1%83%D1%85%D0%B0%D0%BC%D0%B5%D0%B4%D0%BE%D0%B2%D0%B0,_%D0%9D%D0%B8%D0%B3%D0%B8%D0%BD%D0%B0%D1%85%D0%BE%D0%BD_%D0%90%D1%80%D1%81%D0%BB%D0%BE%D0%BD%D0%BE%D0%B2%D0%BD%D0%B0"><img src="../images/member14.jpg" alt="Имя Фамилия"></a>
+                            <h3>Шермухамедова Нигинахон Арслановна</h3>
+                            <p>философия ғылымдарының докторы, Мырза Ұлықбек атындағы
+                                Өзбекстан ұлттық университетінің профессоры, Өзбекстан
+                                Философиялық қоғамының төрайымы </p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -107,13 +146,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/kz_pages/forum.html">Фараби форум</a>
-            <a href="/kz_pages/programme.html">Бағдарлама</a>
-            <a href="/kz_pages/sections.html">Секциялар</a>
+            <a href="/kz_pages/programme.html">Конференция №1</a>
+            <a href="/kz_pages/sections.html">Конференция №2</a>
+            <a href="/kz_pages/mazhilis.html">Мәжіліс</a>
             <a href="/kz_pages/discussion.html">Пікірталас алаңдары</a>
+            <a href="/kz_pages/speakers.html">Спикерлер</a>
             <a href="/kz_pages/committee.html">Комитет</a>
             <a href="/kz_pages/partners.html">Серіктестер</a>
-            <a href="/kz_pages/topics.html">Тақырыптар</a>
-            <a href="/kz_pages/speakers.html">Спикерлер</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
