--- a/kz_pages/forum.html
+++ b/kz_pages/forum.html
@@ -62,9 +62,9 @@
             
                     <table>
                         <tr>
-                            <th>Дата</th>
-                            <th>Время</th>
-                            <th>Место</th>
+                            <th>Күні</th>
+                            <th>Уақыты</th>
+                            <th>Өтетін орны</th>
                         </tr>
                         <tr>
                             <td>1-11 сәуір 2025</td>
@@ -136,13 +136,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/kz_pages/forum.html">Фараби форум</a>
-            <a href="/kz_pages/programme.html">Бағдарлама</a>
-            <a href="/kz_pages/sections.html">Секциялар</a>
+            <a href="/kz_pages/programme.html">Конференция №1</a>
+            <a href="/kz_pages/sections.html">Конференция №2</a>
+            <a href="/kz_pages/mazhilis.html">Мәжіліс</a>
             <a href="/kz_pages/discussion.html">Пікірталас алаңдары</a>
+            <a href="/kz_pages/speakers.html">Спикерлер</a>
             <a href="/kz_pages/committee.html">Комитет</a>
             <a href="/kz_pages/partners.html">Серіктестер</a>
-            <a href="/kz_pages/topics.html">Тақырыптар</a>
-            <a href="/kz_pages/speakers.html">Спикерлер</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
