--- a/ru_pages/contacts.html
+++ b/ru_pages/contacts.html
@@ -69,13 +69,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/ru_pages/forum.html">Фараби форум</a>
-            <a href="/ru_pages/programme.html">Программа</a>
-            <a href="/ru_pages/sections.html">Секции</a>
+            <a href="/ru_pages/programme.html">Конференция №1</a>
+            <a href="/ru_pages/sections.html">Конференция №2</a>
+            <a href="/ru_pages/mazhilis.html">Заседание</a>
             <a href="/ru_pages/discussion.html">Дискуссионные площадки</a>
+            <a href="/ru_pages/speakers.html">Спикеры</a>
             <a href="/ru_pages/committee.html">Комитет</a>
             <a href="/ru_pages/partners.html">Партнеры</a>
-            <a href="/ru_pages/topics.html">Темы</a>
-            <a href="/ru_pages/speakers.html">Спикеры</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
