--- a/ru_pages/partners.html
+++ b/ru_pages/partners.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
@@ -6,7 +7,7 @@
         <title>Farabi Forum</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <link rel="stylesheet" href="../src/master.css">
-        <link rel="manifest" href="../manifest.json">
+        <link rel="manifest" href="manifest.json">
         <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../images/logo.png">
     </head>
@@ -97,7 +98,7 @@
                         <p>University of Tsukuba</p>
                     </div>
                 </div>
-            </section>           
+            </section>
         </main>
         <nav class="bottom-nav">
             <a href="/ru_pages/farabi.html"><i class="fa-solid fa-landmark"></i> Фараби</a>
@@ -110,13 +111,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/ru_pages/forum.html">Фараби форум</a>
-            <a href="/ru_pages/programme.html">Программа</a>
-            <a href="/ru_pages/sections.html">Секции</a>
+            <a href="/ru_pages/programme.html">Конференция №1</a>
+            <a href="/ru_pages/sections.html">Конференция №2</a>
+            <a href="/ru_pages/mazhilis.html">Заседание</a>
             <a href="/ru_pages/discussion.html">Дискуссионные площадки</a>
+            <a href="/ru_pages/speakers.html">Спикеры</a>
             <a href="/ru_pages/committee.html">Комитет</a>
             <a href="/ru_pages/partners.html">Партнеры</a>
-            <a href="/ru_pages/topics.html">Темы</a>
-            <a href="/ru_pages/speakers.html">Спикеры</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
