--- a/ru_pages/committee.html
+++ b/ru_pages/committee.html
@@ -29,102 +29,125 @@
                         <div class="committee-member">
                             <img src="../images/member1.jpeg" alt="Имя Фамилия">
                             <h3>Түймебаев Жансейіт Қансейітұлы</h3>
-                            <p>Әл-Фараби атындағы Қазақ ұлттық университетінің Басқарма Төрағасы – Ректоры</p>
+                            <p>Ректор Казахского национального университета имени аль-Фараби</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member2.jpeg" alt="Имя Фамилия">
                             <h3>Дүйсенов Еркін Эрманович</h3>
-                            <p>Басқарма мүшесі – Операциялық қызмет бойынша проректор</p>
+                            <p>Член Правления – Проректор по операционной деятельности</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member1.jpg" alt="Имя Фамилия">
                             <h3>Мейірбаев Бекжан Берикбаевич</h3>
-                            <p>Философия және саясаттану факультетінің деканы</p>
+                            <p>Декан факультета Философии и политолгии</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member3.jpeg" alt="Имя Фамилия">
                             <h3>Әбдірайымова Гүлмира Серікқызы</h3>
-                            <p>Философия және саясаттану факультеті әлеуметтану және әлеуметтік жұмыс кафедрасының меңгерушісі</p>
+                            <p>Заведующий кафедрой социологии и социальной работы
+                                факультета философии и политологии</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member13.png" alt="Имя Фамилия">
                             <h3>Алтаев Жақыпбек Алтайұлы</h3>
-                            <p>философия ғылымдарының докторы, әл-Фараби атындағы Қазақ ұлттық университеті философия кафедрасының  профессоры, әл-Фараби орталығының ғылыми кеңесшісі</p>
+                            <p>доктор философских наук, профессор кафедры философии
+                                Казахского национального университета имени аль-Фараби, научный консультант
+                                Центра аль-Фараби</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member2.jpg" alt="Имя Фамилия">
                             <h3>Арекенова Жадыра Айдынгалиевна</h3>
-                            <p>Әл-Фараби кітапханасының директоры</p>
+                            <p>директор библиотеки Аль-Фараби</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member1.jfif" alt="Имя Фамилия">
                             <h3>Әлқожаева Нұрсұлу Сейткерімқызы</h3>
-                            <p>Философия және саясаттану факультеті педагогика және білім беру менеджменті кафедрасының меңгерушісі</p>
+                            <p>Заведующий кафедрой педагогики и менеджмента
+                                образования факультета философии и политологии
+                                </p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member3.png" alt="Имя Фамилия">
                             <h3>Балтымова Мира Рашидовна</h3>
-                            <p>Философия және саясаттану факультеті дінтану және мәдениеттану кафедрасы меңгерушісінің ғылыми-инновациялық қызмет және халықаралық байланыстар жөніндегі орынбасары</p>
+                            <p>Заместитель заведующего кафедрой религиоведения и
+                                культурологии факультета философии и политологии по научно-инновационной
+                                деятельности и международным связям</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member14.png" alt="Имя Фамилия">
                             <h3>Бекенова Жұмагүл Нұрдәулетқызы</h3>
-                            <p>Философия және саясаттану факультеті философия  кафедрасы меңгерушісінің оқу-әдістемелік және тәрбие ісі жөніндегі орынбасары</p>
+                            <p>Заместитель заведующего кафедрой философии факультета
+                                философии и политологии по учебно-методической и воспитательной работе</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member15.png" alt="Имя Фамилия">
                             <h3>Дүйсенбаев Абай Кабакбаевич</h3>
-                            <p>Философия және саясаттану факультеті педагогика және білім беру менеджменті кафедрасы меңгерушісінің орынбасары, педагогика ғылымдарының кандидаты, доцент</p>
+                            <p>Заместитель заведующего кафедрой педагогики и менеджмента
+                                образования факультета философии и политологии, кандидат педагогических наук,
+                                доцент</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member3.jpg" alt="Имя Фамилия">
                             <h3>Ғабитов Тұрсын Хафизұлы</h3>
-                            <p>философия ғылымдарының докторы, әл-Фараби атындағы Қазақ ұлттық университеті философия кафедрасының профессоры, Түрік халықтары Философия қоғамының тең төрағасы, Қазақстандық Философиялық Конгрестің вице-президенті</p>
+                            <p>доктор философских наук, профессор кафедры философии
+                                Казахского национального университета имени аль-Фараби, сопредседатель
+                                Общества философии тюркских народов, вице-президент Казахстанского
+                                философского конгресса</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member4.png" alt="Имя Фамилия">
                             <h3>Зейнуллин Раймбек Бақытжанұлы</h3>
-                            <p>Философия және саясаттану факультеті философия  кафедрасы меңгерушісінің ғылыми-инновациялық қызмет және халықаралық байланыстар жөніндегі орынбасары</p>
+                            <p>Заместитель заведующего кафедрой философии факультета
+                                философии и политологии по научно-инновационной деятельности и
+                                международным связям.</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member17.png" alt="Имя Фамилия">
                             <h3>Каупенбаева Самал Мухаметалиевна</h3>
-                            <p>Философия және саясаттану факультеті дінтану және мәдениеттану кафедрасының меңгерушісінің міндетін атқарушы</p>
+                            <p>И.о. заведующего кафедрой религиоведения и культурологии
+                                факультета философии и политологии</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member18.png" alt="Имя Фамилия">
                             <h3>Құдайбергенова Назгүл Жанисовна</h3>
-                            <p>Философия және саясаттану факультеті философия кафедрасының доценті м.а., PhD</p>
+                            <p>И.о. доцента кафедры философии факультета философии
+                                и политологии, PhD</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member19.png" alt="Имя Фамилия">
                             <h3>Құранбек Әсет Абайұлы</h3>
-                            <p>Философия және саясаттану факультеті философия  кафедрасының меңгерушісі</p>
+                            <p>Заведующий кафедрой философии факультета философии и
+                                политологии.</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member20.png" alt="Имя Фамилия">
                             <h3>Құрманалиева Айнұр Дүрбелеңқызы</h3>
-                            <p>философия ғылымдарының докторы, Философия және саясаттану факультеті дінтану және мәдениеттану кафедрасының  профессоры</p>
+                            <p>доктор философских наук, профессор кафедры
+                                религиоведения и культурологии факультета философии и политологии.</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member4.jpg" alt="Имя Фамилия">
                             <h3>Мынбаева Айгерим Казыевна</h3>
-                            <p>Философия және саясаттану факультеті жалпы және қолданбалы психология кафедрасының меңгерушісі</p>
+                            <p>Заведующий кафедрой общей и прикладной психологии
+                                факультета философии и политологии</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member5.jpg" alt="Имя Фамилия">
                             <h3>Насимова Гүлнар Өрленбаевна</h3>
-                            <p>Философия және саясаттану факультеті саясаттану және саяси технологиялар кафедрасының меңгерушісі</p>
+                            <p>Заведующий кафедрой политологии и политических технологий
+                                факультета философии и политологии.</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member23.png" alt="Имя Фамилия">
                             <h3>Өмірбекова Әлия Өмірбековна</h3>
-                            <p>Философия және саясаттану факультеті деканының оқу-әдістемелік және тәрбие жұмысы жөніндегі орынбасары</p>
+                            <p>Заместитель декана факультета философии и политологии по
+                                учебно-методической и воспитательной работе</p>
                         </div>
                         <div class="committee-member">
                             <img src="../images/member2.png" alt="Имя Фамилия">
                             <h3>Өсербаев Елдос Нұрланұлы</h3>
-                            <p>Философия және саясаттану факультеті деканының ғылыми-инновациялық қызмет және халықаралық байланыстар жөніндегі орынбасары</p>
+                            <p>Заместитель декана факультета философии и политологии по
+                                научно-инновационной деятельности и международным связям.</p>
                         </div>
                     </div>
                 </div>
@@ -142,13 +165,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/ru_pages/forum.html">Фараби форум</a>
-            <a href="/ru_pages/programme.html">Программа</a>
-            <a href="/ru_pages/sections.html">Секции</a>
+            <a href="/ru_pages/programme.html">Конференция №1</a>
+            <a href="/ru_pages/sections.html">Конференция №2</a>
+            <a href="/ru_pages/mazhilis.html">Заседание</a>
             <a href="/ru_pages/discussion.html">Дискуссионные площадки</a>
+            <a href="/ru_pages/speakers.html">Спикеры</a>
             <a href="/ru_pages/committee.html">Комитет</a>
             <a href="/ru_pages/partners.html">Партнеры</a>
-            <a href="/ru_pages/topics.html">Темы</a>
-            <a href="/ru_pages/speakers.html">Спикеры</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
