--- a/en_index.html
+++ b/en_index.html
@@ -26,25 +26,25 @@
                     <a href="/en_pages/forum.html"><i class="fa-solid fa-calendar"></i><span>Farabi Forum</span></a>
                 </div>
                 <div class="menu-item">
-                    <a href="/en_pages/programme.html"><i class="fa-solid fa-calendar"></i><span>Programme</span></a>
+                    <a href="/en_pages/programme.html"><i class="fa-solid fa-calendar-days"></i><span>Conference №1</span></a>
                 </div>
                 <div class="menu-item">
-                    <a href="/en_pages/sections.html"><i class="fa-solid fa-newspaper"></i><span>Sections</span></a>
+                    <a href="/en_pages/sections.html"><i class="fa-solid fa-users"></i><span>Conference №2</span></a>
+                </div>
+                <div class="menu-item">
+                    <a href="/en_pages/mazhilis.html"><i class="fa-solid fa-newspaper"></i><span>Meeting</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/en_pages/discussion.html"><i class="fa-solid fa-comments"></i><span>Discussion areas</span></a>
+                </div>
+                <div class="menu-item">
+                    <a href="/en_pages/speakers.html"><i class="fa-solid fa-microphone"></i><span>Speakers</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/en_pages/committee.html"><i class="fa-solid fa-users"></i><span>Committee</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/en_pages/partners.html"><i class="fa-solid fa-handshake"></i><span>Partners</span></a>
-                </div>
-                <div class="menu-item">
-                    <a href="/en_pages/topics.html"><i class="fa-solid fa-file-alt"></i><span>Topics</span></a>
-                </div>
-                <div class="menu-item">
-                    <a href="/en_pages/speakers.html"><i class="fa-solid fa-microphone"></i><span>Speakers</span></a>
                 </div>
             </div>
         </main>
@@ -59,13 +59,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/en_pages/forum.html">Farabi Forum</a>
-            <a href="/en_pages/programme.html">Programme</a>
-            <a href="/en_pages/sections.html">Sections</a>
+            <a href="/en_pages/programme.html">Conference №1</a>
+            <a href="/en_pages/sections.html">Conference №2</a>
+            <a href="/en_pages/sections.html">Meeting</a>
             <a href="/en_pages/discussion.html">Discussion areas</a>
+            <a href="/en_pages/speakers.html">Speakers</a>
             <a href="/en_pages/committee.html">Committee</a>
             <a href="/en_pages/partners.html">Partners</a>
-            <a href="/en_pages/topics.html">Topics</a>
-            <a href="/en_pages/speakers.html">Speakers</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
