--- a/ru_index.html
+++ b/ru_index.html
@@ -26,25 +26,25 @@
                     <a href="/ru_pages/forum.html"><i class="fa-solid fa-calendar"></i><span>Фараби форум</span></a>
                 </div>
                 <div class="menu-item">
-                    <a href="/ru_pages/programme.html"><i class="fa-solid fa-calendar"></i><span>Программа</span></a>
+                    <a href="/ru_pages/programme.html"><i class="fa-solid fa-calendar-days"></i><span>Конференция №1</span></a>
                 </div>
                 <div class="menu-item">
-                    <a href="/ru_pages/sections.html"><i class="fa-solid fa-newspaper"></i><span>Секции</span></a>
+                    <a href="/ru_pages/sections.html"><i class="fa-solid fa-users"></i><span>Конференция №2</span></a>
+                </div>
+                <div class="menu-item">
+                    <a href="/ru_pages/mazhilis.html"><i class="fa-solid fa-newspaper"></i><span>Заседание</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/ru_pages/discussion.html"><i class="fa-solid fa-comments"></i><span>Дискуссионные площадки</span></a>
+                </div>
+                <div class="menu-item">
+                    <a href="/ru_pages/speakers.html"><i class="fa-solid fa-microphone"></i><span>Спикеры</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/ru_pages/committee.html"><i class="fa-solid fa-users"></i><span>Комитет</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/ru_pages/partners.html"><i class="fa-solid fa-handshake"></i><span>Партнеры</span></a>
-                </div>
-                <div class="menu-item">
-                    <a href="/ru_pages/topics.html"><i class="fa-solid fa-file-alt"></i><span>Темы</span></a>
-                </div>
-                <div class="menu-item">
-                    <a href="/ru_pages/speakers.html"><i class="fa-solid fa-microphone"></i><span>Спикеры</span></a>
                 </div>
             </div>
         </main>
@@ -59,12 +59,12 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/ru_pages/forum.html">Фараби форум</a>
-            <a href="/ru_pages/programme.html">Программа</a>
-            <a href="/ru_pages/sections.html">Секции</a>
+            <a href="/ru_pages/programme.html">Конференция №1</a>
+            <a href="/ru_pages/sections.html">Конференция №2</a>
+            <a href="/ru_pages/mazhilis.html">Заседание</a>
             <a href="/ru_pages/discussion.html">Дискуссионные площадки</a>
             <a href="/ru_pages/committee.html">Комитет</a>
             <a href="/ru_pages/partners.html">Партнеры</a>
-            <a href="/ru_pages/topics.html">Темы</a>
             <a href="/ru_pages/speakers.html">Спикеры</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
