--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
                     <a href="/kz_pages/forum.html"><i class="fa-solid fa-calendar"></i><span>Фараби форум</span></a>
                 </div>
                 <div class="menu-item">
-                    <a href="/kz_pages/programme.html"><i class="fa-solid fa-calendar-days"></i><span>Бағдарлама</span></a>
+                    <a href="/kz_pages/programme.html"><i class="fa-solid fa-calendar-days"></i><span>Конференция №1</span></a>
                 </div>
                 <div class="menu-item">
-                    <a href="/kz_pages/sections.html"><i class="fa-solid fa-newspaper"></i><span>Секциялар</span></a>
+                    <a href="/kz_pages/sections.html"><i class="fa-solid fa-users"></i><span>Конференция №2</span></a>
+                </div>
+                <div class="menu-item">
+                    <a href="/kz_pages/mazhilis.html"><i class="fa-solid fa-newspaper"></i><span>Мәжіліс</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/kz_pages/discussion.html"><i class="fa-solid fa-comments"></i><span>Пікірталас алаңдары</span></a>
+                </div>
+                <div class="menu-item">
+                    <a href="/kz_pages/speakers.html"><i class="fa-solid fa-microphone"></i><span>Спикерлер</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/kz_pages/committee.html"><i class="fa-solid fa-users"></i><span>Комитет</span></a>
                 </div>
                 <div class="menu-item">
                     <a href="/kz_pages/partners.html"><i class="fa-solid fa-handshake"></i><span>Серіктестер</span></a>
-                </div>
-                <div class="menu-item">
-                    <a href="/kz_pages/topics.html"><i class="fa-solid fa-file-alt"></i><span>Тақырыптар</span></a>
-                </div>
-                <div class="menu-item">
-                    <a href="/kz_pages/speakers.html"><i class="fa-solid fa-microphone"></i><span>Спикерлер</span></a>
                 </div>
             </div>
         </main>
@@ -59,13 +59,13 @@
         </nav>
         <div id="dropdown-menu" class="dropdown-menu">
             <a href="/kz_pages/forum.html">Фараби форум</a>
-            <a href="/kz_pages/programme.html">Бағдарлама</a>
-            <a href="/kz_pages/sections.html">Секциялар</a>
+            <a href="/kz_pages/programme.html">Конференция №1</a>
+            <a href="/kz_pages/sections.html">Конференция №2</a>
+            <a href="/kz_pages/mazhilis.html">Мәжіліс</a>
             <a href="/kz_pages/discussion.html">Пікірталас алаңдары</a>
+            <a href="/kz_pages/speakers.html">Спикерлер</a>
             <a href="/kz_pages/committee.html">Комитет</a>
             <a href="/kz_pages/partners.html">Серіктестер</a>
-            <a href="/kz_pages/topics.html">Тақырыптар</a>
-            <a href="/kz_pages/speakers.html">Спикерлер</a>
             <div class="language-menu">
                 <a href="/">Қаз</a>
                 <a href="/ru_index.html">Рус</a>
